# django-extended-choices

./: .gitignore  README.rst  setup.cfg  tox.ini
.github/workflows/: main.yml
extended_choices/: __init__.py  choices.py  fields.py  helpers.py  tests.py
